--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/RoboForum?schema=public"
 JWT_EXP=1d
 JWT_SECRET=qwerty
-NODE_ENV=development
+NODE_ENV=production
