--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# USER ROLE ID 1 === 'USER'
+# USER ROLE ID 2 === 'ADMIN'
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# PROJECT TYPE ID 1 === 'PUBLIC'
+# PROJECT TYPE ID 2 === 'PRIVATE'
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/RoboForum?schema=public"
 JWT_EXP=1d
